--- a/css/sudip.css
+++ b/css/sudip.css
@@ -11,7 +11,7 @@
     top: 0%;
     left: 0%;
     width: 100%;
-    height: 35px 12%;
+    height: 100px 100px;
     background: rgba(0, 0, 0, 0.818);
     backdrop-filter: blur(10px);
     display: flex;
@@ -41,10 +41,67 @@ span{
     color: orangered;
     border-bottom: 3px solid orangered;
 }
-nav a.contact{
-    padding: 10px 28px;
+.contact{
+    padding: 15px 28px;
     background-color: white;
     color: black;
-    border:2px solid transparent
+    border:2px solid transparent;
+    border-radius: 25px;
+    font-size: 16px;
+    letter-spacing: 1px;
+    font-weight: 600px;
+    transition: 0.3s ease;
     
+}
+.home{
+    width: 100%;
+    min-height: 100vh;
+    background: rgb(241,241,241);
+    display: flex;
+    align-items: center;
+    gap: 7em;
+    padding: 30px 12% 0;
+}
+.home-content{
+    max-width: 800px;
+}
+.home-content h3{
+    font-size: 42px;
+}
+.home-content h3{
+    font-size: 18px;
+    margin: 25px 0 30px;
+}
+.btn-box{
+    width: 345px;
+    display: flex;
+    gap: 2em;
+}
+.btn-1{
+    padding:15px 28px;
+    background-color: black;
+    color: white;
+    border: 2px solid transparent;
+    border-radius: 8px;
+    font-size: 18px;
+    letter-spacing: 1px;
+    font-weight: 600;
+    transition: o.3s ease;
+    cursor: pointer;
+}
+.btn-2{
+    padding: 15px 28px;
+    background-color: orangered;
+    color:white;
+    border: 2px solid black;
+    border-radius: 8px;
+    font-size: 18px;
+    letter-spacing: 1px;
+    font-weight: 600;
+    transition: 0.3s ease;
+    cursor: pointer;
+}
+.img-box{
+    border-radius: 50%;
+    width: 550px;
 }
